--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
                 <p class="h2 text-center ms-2 me-2 fw-light">👋 welcome to vocal, the future of communications</p>
                 <p class="text-center ms-2 me-2">vocal is currently in development, you can join early if you find the secret code! 🔊</p>
                 <span class="div-sm"></span>
-                <a class="btn fw-light text-white mt-3 shadow-none" href="?inputCode=true" style="background: linear-gradient(45deg, #B24592, #F15F79);">
+                <a class="btn fw-light text-white mt-3 shadow-none gradient-bg" href="?inputCode=true">
                     wanna give it a try?
                 </a>
             </div>
@@ -26,7 +26,7 @@
                     <form action="/?inputCode=true" method="post" class="row g-3 mt-1">
                         <div class="input-group mb-3">
                             <input type="text" name="code" placeholder="🤫 shhh..." class="form-control shadow-none">
-                            <button type="submit" class="btn fw-light text-white shadow-none form-control" style="background: linear-gradient(45deg, #B24592, #F15F79);">
+                            <button type="submit" class="btn fw-light text-white shadow-none form-control gradient-bg">
                                 submit
                             </button>
                         </div>
@@ -41,7 +41,7 @@
                         <a href="https://discord.gg/pjnpQDQgjB" target="_blank" class="gradient-text text-decoration-none" title="discord">get a hint here</a>
                     <% } %>
                 <% } else { %>
-                    <a href="/auth" class="btn fw-light text-white shadow-none mt-3" style="background: linear-gradient(45deg, #B24592, #F15F79);">
+                    <a href="/auth" class="btn fw-light text-white shadow-none mt-3 gradient-bg">
                         <i class="bi bi-discord"></i> login with discord
                     </a>
 
